--- a/.env
+++ b/.env
@@ -29,6 +29,12 @@ APP_SECRET=3645398915a57895a248a2c6235b27e8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DB_USER=unte
+DB_PASS=unte
+DB_NAME=unte
+DB_HOST=database
+CONVERT_API_SECRET=Ol51JIbxJDbrrzS2
+CONVERT_API_KEY=974043925
+DATABASE_URL="mysql://${DB_USER}:${DB_NAME}@${DB_HOST}:3306/${DB_NAME}?serverVersion=8"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
